add XGBoost forecast and add csv with store grouped weekly sales

--- a/src/walmart_sales_eda.ipynb
+++ b/src/walmart_sales_eda.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "4  211.350143         8.106  "
       ]
      },
-     "execution_count": 340,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "0"
       ]
      },
-     "execution_count": 344,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "max     227.232807     14.313000  "
       ]
      },
-     "execution_count": 345,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -426,14 +426,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/rs/wtw7v0gd2cn68ztrym0zq6d80000gn/T/ipykernel_39860/1963757295.py:2: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "/var/folders/rs/wtw7v0gd2cn68ztrym0zq6d80000gn/T/ipykernel_82649/1963757295.py:2: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  sns.heatmap(df.corr(), annot=True, cmap='coolwarm', fmt=\".2f\")\n"
      ]
     },
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -595,6 +595,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# saving grouped weekly_sales data in a new dataframe\n",
+    "# agg_rules = {\n",
+    "#     'weekly_sales': 'sum',         \n",
+    "#     'holiday_flag': 'max',  \n",
+    "#     'temperature' : 'mean',      \n",
+    "#     'cpi': 'mean',                \n",
+    "#     'unemployment': 'mean',      \n",
+    "# }\n",
+    "\n",
+    "# weekly_df = df.groupby('date').agg(agg_rules).reset_index()\n",
+    "# weekly_df.to_csv('Grouped_Walmart_Sales.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -603,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
