--- a/src/walmart_sales_UVTS_forecast.ipynb
+++ b/src/walmart_sales_UVTS_forecast.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +28,7 @@
     "from statsmodels.graphics.tsaplots import plot_pacf\n",
     "from statsmodels.graphics.tsaplots import plot_acf\n",
     "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
-    "from statsmodels.tsa.holtwinters import ExponentialSmoothing\n",
-    "import xgboost as xgb"
+    "from statsmodels.tsa.holtwinters import ExponentialSmoothing"
    ]
   },
   {
@@ -41,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -161,8 +160,7 @@
       "/Users/eric/anaconda3/lib/python3.11/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: No frequency information was provided, so inferred frequency W-FRI will be used.\n",
       "  self._init_dates(dates, freq)\n",
       "/Users/eric/anaconda3/lib/python3.11/site-packages/statsmodels/tsa/statespace/sarimax.py:866: UserWarning: Too few observations to estimate starting parameters for seasonal ARMA. All parameters except for variances will be set to zeros.\n",
-      "  warn('Too few observations to estimate starting parameters%s.'\n",
-      " This problem is unconstrained.\n"
+      "  warn('Too few observations to estimate starting parameters%s.'\n"
      ]
     },
     {
@@ -178,7 +176,20 @@
       "\n",
       "At X0         0 variables are exactly at the bounds\n",
       "\n",
-      "At iterate    0    f=  1.05041D+01    |proj g|=  2.56599D+00\n",
+      "At iterate    0    f=  1.05041D+01    |proj g|=  2.56599D+00\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " This problem is unconstrained.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "At iterate    5    f=  1.02043D+01    |proj g|=  6.02467D+00\n",
       "\n",
@@ -196,21 +207,7 @@
       "\n",
       "At iterate   40    f=  1.01082D+01    |proj g|=  8.12639D-03\n",
       "\n",
-      "At iterate   45    f=  1.01080D+01    |proj g|=  9.49604D-03\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/eric/anaconda3/lib/python3.11/site-packages/statsmodels/base/model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
-      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "At iterate   45    f=  1.01080D+01    |proj g|=  9.49604D-03\n",
       "\n",
       "At iterate   50    f=  1.01080D+01    |proj g|=  8.31483D-03\n",
       "\n",
@@ -232,6 +229,14 @@
       "\n",
       "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT                 \n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/eric/anaconda3/lib/python3.11/site-packages/statsmodels/base/model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n"
+     ]
     }
    ],
    "source": [
@@ -248,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +324,23 @@
       "\n",
       "At iterate   20    f=  7.93997D+00    |proj g|=  4.69889D-01\n",
       "\n",
-      "At iterate   25    f=  7.92970D+00    |proj g|=  7.36311D-02\n",
+      "At iterate   25    f=  7.92970D+00    |proj g|=  7.36311D-02\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Warning:  more than 10 function and gradient\n",
+      "   evaluations in the last line search.  Termination\n",
+      "   may possibly be caused by a bad search direction.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "           * * *\n",
       "\n",
@@ -339,16 +360,6 @@
       "\n",
       "CONVERGENCE: REL_REDUCTION_OF_F_<=_FACTR*EPSMCH             \n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " Warning:  more than 10 function and gradient\n",
-      "   evaluations in the last line search.  Termination\n",
-      "   may possibly be caused by a bad search direction.\n"
-     ]
     }
    ],
    "source": [
@@ -359,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -3462,7 +3473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
